added candidate functionality